# NoGame

./: .gitignore  CMakeLists.txt  LICENSE  README.md
shaders/: compile.bat  triangle_frag.glsl  triangle_vert.glsl
src/: logger.h  main.cpp  simple_logger.cpp
src/vulkan_base/: vulkan_base.h  vulkan_device.cpp  vulkan_pipeline.cpp  vulkan_renderpass.cpp  vulkan_swapchain.cpp
